--- a/prova-pratica/style.css
+++ b/prova-pratica/style.css
@@ -58,12 +58,14 @@ nav {
 #premios{
     font-size: 20px;
     font-family: 'Georama', sans-serif;
+    line-height: 38px;
 }
 
 .frase{
     font-size: 20px;
     font-family: 'Georama', sans-serif;
     padding: 1rem;
+    line-height: 38px;
 }
 
 
